WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52825
[RegexFuzz] Hang with forward assertion
https://bugs.webkit.org/show_bug.cgi?id=52825
Summary
[RegexFuzz] Hang with forward assertion
Oliver Hunt
Reported
2011-01-20 11:37:05 PST
/*FRC*/ count=1287; testRegexp("(w|f)(?:5{3}|l+?;|((?!I){3,}))|pk", "my", ["","f5II{IIpk","wfj","wk","f5II{II","f5II{IIO","\u0000k","\u0000-","flllIIIIk","wfk"]); Reduced to: /(w)(?:5{3}|())|pk/.test("5")
Attachments
Patch to make BacktrackTo label propagation conditional
(4.33 KB, patch)
2011-01-21 15:37 PST
,
Michael Saboff
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2011-01-20 14:02:11 PST
<
rdar://problem/8894332
>
Michael Saboff
Comment 2
2011-01-21 15:37:55 PST
Created
attachment 79804
[details]
Patch to make BacktrackTo label propagation conditional
Oliver Hunt
Comment 3
2011-01-21 15:40:51 PST
Comment on
attachment 79804
[details]
Patch to make BacktrackTo label propagation conditional View in context:
https://bugs.webkit.org/attachment.cgi?id=79804&action=review
> Source/JavaScriptCore/yarr/YarrJIT.cpp:609 > + void propagateBacktrackToLabel(BacktrackDestination& rhs)
This should be a const ref
Michael Saboff
Comment 4
2011-01-21 15:52:53 PST
Committed
r76407
: <
http://trac.webkit.org/changeset/76407
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug